@@ -24,7 +24,7 @@ from sys import version_info
 if version_info[:2] > (2, 5):
     install_requires = ['python-snappy']
 else:
-    install_requires = ['python-snappy', 'simplejson >= 2.0.9']
+    install_requires = ['python-snappy', 'simplejson >= 2.0.9', 'urllib3']
 
 setup(
   name = 'avro',
